syntax = "proto3";
package pcbook;

import "proto/memory_message.proto";

option go_package = "./;pcbook";

message Filter {
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_ghz = 3;
  Memory min_ram = 4;
}
